<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Doodle</string>
    <string name="app_developer" translatable="false">Patrick Zedler</string>
    <string name="app_mail" translatable="false">dev@patrickzedler.com</string>
    <string name="app_website" translatable="false">https://patrickzedler.com</string>
    <string name="app_vending" translatable="false">http://play.google.com/store/apps/dev?id=5870283381366287608</string>
    <string name="app_github" translatable="false">https://github.com/patzly/doodle-android/</string>
    <string name="app_translate" translatable="false">https://www.transifex.com/patzly/doodle-android/</string>
    <string name="app_privacy" translatable="false">https://patrickzedler.com/doodle/privacy-policy-doodle/</string>
    <string name="wallpaper_description">Colorful live wallpaper with auto dark mode and power-efficient animations. Customize it to your needs!</string>
    <string name="wallpaper_description_picker">Explore a colorful collection of shapes, refined with gentle parallax and zoom effects when you swipe through your home screens and unlock your device.\nCustomize the wallpaper to match your own style!</string>
    <string name="title_info">Information</string>
    <string name="title_apply_changes">Apply changes</string>
    <string name="title_logcat">Logcat</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_licenses">Open source licenses</string>
    <string name="label_ms">%1$sms</string>
    <string name="label_degrees">%1$s degrees</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_select">Select</string>
    <string name="action_close">Close</string>
    <string name="action_back">Back</string>
    <string name="action_open_link">Open external website</string>
    <string name="action_hide">Hide</string>
    <string name="action_reset">Reset</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_select_all">Select all</string>
    <string name="action_continue">Continue</string>
    <string name="action_reload">Reload</string>
    <string name="action_open_app_info">Open app info</string>
    <string name="action_set">Set wallpaper</string>
    <string name="action_learn_more">Learn more</string>
    <string name="action_help">Help</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_share">Share</string>
    <string name="action_share_description">Tell your friends about Doodle</string>
    <string name="action_email">Send email</string>
    <string name="action_email_description">Contact the developer</string>
    <string name="action_rate">Rate on Google Play</string>
    <string name="action_rate_description">Support the development</string>
    <string name="action_github">Doodle Android on GitHub</string>
    <string name="action_github_description">Open a new issue</string>
    <string name="action_language_select">Select language</string>
    <string name="action_set_static">Set static wallpaper</string>
    <string name="action_change_time">Change time</string>
    <string name="action_change_interval">Change interval</string>
    <string name="action_copy_to_clipboard">Copy to clipboard</string>
    <string name="appearance_title">Appearance</string>
    <string name="appearance_description">Design &amp; color options</string>
    <string name="appearance_one_ui">Samsung\'s unfavorable implementation of dynamic colors in One UI 4.1 fully ignores colors provided by live wallpaper apps like Doodle.\nTo apply the colors to your system, set the current design as a static background below to let the system fetch the colors, then re-apply it as live wallpaper.</string>
    <string name="appearance_design">Design</string>
    <string name="appearance_design_doodle">Pixel 4 Doodle Collection</string>
    <string name="appearance_design_monet">Pixel 6 Material You Collection</string>
    <string name="appearance_design_anna">Live wallpapers à l\'Anna Kövecses</string>
    <string name="appearance_variant">Variant</string>
    <string name="appearance_night_mode">Night mode</string>
    <string name="appearance_night_mode_description">Only dark colors</string>
    <string name="appearance_night_mode_on">On</string>
    <string name="appearance_night_mode_off">Off</string>
    <string name="appearance_light_text">Always use white text</string>
    <string name="appearance_light_text_description">Instead of dark text on bright background</string>
    <string name="appearance_dark_text">Use dark text</string>
    <string name="appearance_dark_text_description">Only when background is bright enough</string>
    <string name="appearance_colors_category">Colors</string>
    <string name="appearance_colors">Extracted colors</string>
    <string name="appearance_colors_description">Used for calculating text contrast</string>
    <string name="appearance_colors_description_dynamic">Used by the system\'s theming engine</string>
    <string name="appearance_colors_description_one_ui">As mentioned above, the provided colors of live wallpapers are ignored by One UI</string>
    <string name="appearance_colors_primary">Choose primary color</string>
    <string name="appearance_colors_secondary">Choose secondary color</string>
    <string name="appearance_colors_tertiary">Choose tertiary color</string>
    <string name="appearance_colors_custom">Select custom color</string>
    <string name="appearance_colors_info">On devices without dynamic color support (Android 11 or lower), only the primary color is used to calculate the launcher text contrast and tinting the recent apps screen\'s background.</string>
    <string name="appearance_colors_info_dynamic">On devices with Android 12 or higher and dynamic color support, the three selected colors are used to automatically create a system-wide color theme.</string>
    <string name="appearance_random">Random wallpaper design</string>
    <string name="appearance_random_description">Select the trigger below</string>
    <string name="appearance_random_screen_off">Screen off</string>
    <string name="appearance_random_daily">Daily at %1$s</string>
    <string name="appearance_random_interval">Select interval</string>
    <plurals name="appearance_random_interval_minutes">
        <item quantity="one">Every %1$d minute</item>
        <item quantity="other">Every %1$d minutes</item>
    </plurals>
    <plurals name="appearance_random_interval_hours">
        <item quantity="one">Every %1$d hour</item>
        <item quantity="other">Every %1$d hours</item>
    </plurals>
    <plurals name="appearance_random_interval_days">
        <item quantity="one">Every %1$d day</item>
        <item quantity="other">Every %1$d days</item>
    </plurals>
    <string name="parallax_title">Parallax</string>
    <string name="parallax_description">Swipe &amp; tilt effect</string>
    <string name="parallax_swipe_category">Swiping</string>
    <string name="parallax_swipe_touch_wiz">It seems that your current launcher is Samsung TouchWiz or One UI Home, which do not support swipe effect. Please try a different launcher to enable it.\nYou can ignore this warning if you already set another launcher as default.</string>
    <string name="parallax_swipe">Swipe effect</string>
    <string name="parallax_swipe_description">Horizontal offset on page swipe</string>
    <string name="parallax_swipe_power_save">Respect battery saver</string>
    <string name="parallax_swipe_power_save_description">Pause swipe effect when battery saver is enabled</string>
    <string name="parallax_tilt_category">Tilting</string>
    <string name="parallax_tilt">Tilt effect</string>
    <string name="parallax_tilt_description">Movement when tilting the device</string>
    <string name="parallax_tilt_warning">Higher battery consumption</string>
    <string name="parallax_refresh_rate">Tilt sensor refresh rate</string>
    <string name="parallax_refresh_rate_description">Too short delays can make animations laggy</string>
    <string name="parallax_damping">Motion damping</string>
    <string name="parallax_damping_description">Decrease for more smoothness</string>
    <string name="parallax_threshold">Movement threshold</string>
    <string name="parallax_threshold_description">Increase to pause continuous rendering despite little movement</string>
    <string name="parallax_tilt_power_save_description">Pause tilt effect when battery saver is enabled</string>
    <string name="size_title">Shape size</string>
    <string name="size_description">Scale &amp; zoom effect</string>
    <string name="size_category_zoom">Zoom effect</string>
    <string name="size_category_launcher">Launcher zoom</string>
    <string name="size_category_unlock">Lockscreen zoom</string>
    <string name="size_scale">Scale</string>
    <string name="size_scale_description">Useful for big screens and densities</string>
    <string name="size_zoom">Zoom intensity</string>
    <string name="size_zoom_description">When increased, the camera zooms out more</string>
    <string name="size_zoom_rotation">Rotate some shapes while zooming</string>
    <string name="size_zoom_rotation_description">Maximum rotation in degrees</string>
    <string name="size_zoom_power_save_description">Pause zoom effect when battery saver is enabled</string>
    <string name="size_zoom_launcher">Zoom out when opening quick settings or app drawer</string>
    <string name="size_zoom_launcher_description">Might be unavailable on some devices</string>
    <string name="size_zoom_damping">Animation damping</string>
    <string name="size_zoom_damping_description">Activate and decrease for smoother zooming</string>
    <string name="size_zoom_unlock">Zoom on lockscreen</string>
    <string name="size_zoom_unlock_description">Select direction</string>
    <string name="size_zoom_unlock_in">Zoom in</string>
    <string name="size_zoom_unlock_out">Zoom out</string>
    <string name="size_zoom_duration">Unlock zoom duration</string>
    <string name="size_zoom_duration_description">Decrease for faster animation</string>
    <string name="other_title">Other options</string>
    <string name="other_description">Rendering, language &amp; reset</string>
    <string name="other_language">Language</string>
    <string name="about_title">About</string>
    <string name="about_version">Version</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_changelog_description">What\'s new?</string>
    <string name="about_developer">Developer</string>
    <string name="about_vending" translatable="false">Google Play</string>
    <string name="about_vending_description">More apps by the developer</string>
    <string name="about_github" translatable="false">GitHub</string>
    <string name="about_github_description">Source code</string>
    <string name="about_translation" translatable="false">Transifex</string>
    <string name="about_translation_description">Help translate Doodle</string>
    <string name="msg_feedback">A great app requires a lot of time and lives from the feedback of its users.</string>
    <string name="msg_apply_changes">To apply (eventually) changed options a restart of the running wallpaper service is recommended. This cannot be done automatically.\nPlease force-stop Doodle in your system settings and then apply Doodle as your wallpaper again.</string>
    <string name="license_jost" translatable="false">Jost* Typeface</string>
    <string name="license_jost_author" translatable="false">Owen Earl</string>
    <string name="license_author_google" translatable="false">Google</string>
    <string name="license_material_components" translatable="false">Material Components Android</string>
    <string name="license_material_icons" translatable="false">Material Design Icons</string>
</resources>