<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Doodle Android.
  ~
  ~ Doodle Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Doodle Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2020-2021 by Patrick Zedler
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="?android:actionBarSize"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <FrameLayout
        android:id="@+id/frame_about_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/actionBarItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:contentDescription="@string/action_back"
        android:tooltipText="@string/action_back"
        android:focusable="true"
        tools:targetApi="o">

        <ImageView
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="center"
          android:importantForAccessibility="no"
          android:src="@drawable/ic_round_arrow_back" />

      </FrameLayout>

      <TextView
        style="@style/Widget.Doodle.TextView.Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/about_title" />

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/menu_main" />

    </LinearLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:id="@+id/scroll_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:actionBarSize">

    <LinearLayout
      android:id="@+id/linear_about_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:orientation="vertical">

      <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine">

        <ImageView
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_info_outline"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.OverLine"
            android:text="@string/about_version" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/versionName" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_about_changelog"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">

        <ImageView
          android:id="@+id/image_about_changelog"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_history_anim"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/about_changelog" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/about_changelog_description" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_about_developer"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">

        <ImageView
          android:id="@+id/image_about_developer"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_person_anim"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.OverLine"
            android:text="@string/about_developer" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/app_developer" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_about_vending"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">

        <ImageView
          android:id="@+id/image_about_vending"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_vending_anim"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.OverLine"
            android:text="@string/about_vending" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/about_vending_description" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_about_github"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable"
        android:background="@drawable/ripple_bg_list_item">

        <ImageView
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_github"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.OverLine"
            android:text="@string/about_github" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/about_github_description" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_about_translation"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable"
        android:background="@drawable/ripple_bg_list_item">

        <ImageView
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_translate"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.OverLine"
            android:text="@string/about_translation" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/about_translation_description" />

        </LinearLayout>

      </LinearLayout>

      <TextView
        style="@style/Widget.Doodle.TextView.Category"
        android:text="@string/title_licenses" />

      <LinearLayout
        android:id="@+id/linear_about_license_jost"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">

        <ImageView
          android:id="@+id/image_about_license_jost"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_copyright_anim"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/license_jost" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/license_jost_author" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_about_license_material_components"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">

        <ImageView
          android:id="@+id/image_about_license_material_components"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_copyright_anim"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/license_material_components" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/license_author_google" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_about_license_material_icons"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">

        <ImageView
          android:id="@+id/image_about_license_material_icons"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_copyright_anim"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/license_material_icons" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/license_author_google" />

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>