<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Doodle Android.
  ~
  ~ Doodle Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Doodle Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2019-2022 by Patrick Zedler
  -->

<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/action_reload"
    android:title="@string/action_reload"
    android:icon="@drawable/ic_round_refresh_anim"
    app:iconTint="?attr/colorOnSurfaceVariant"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/action_feedback"
    android:title="@string/action_send_feedback"
    app:showAsAction="never" />

  <item
    android:id="@+id/action_help"
    android:title="@string/action_help"
    app:showAsAction="never" />

  <item
    android:id="@+id/action_share"
    android:title="@string/action_share"
    app:showAsAction="never" />

</menu>