<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Doodle Android.
  ~
  ~ Doodle Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Doodle Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2019-2021 by Patrick Zedler
  -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <com.google.android.material.appbar.MaterialToolbar
    style="@style/Widget.Doodle.Toolbar.Centered"
    app:title="@string/title_feedback" />

  <com.google.android.material.divider.MaterialDivider
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
      android:id="@+id/linear_feedback_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="16dp"
      android:paddingBottom="8dp"
      android:gravity="center_horizontal">

      <TextView
        style="@style/Widget.Doodle.TextView.Paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/msg_feedback"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

      <LinearLayout
        android:id="@+id/linear_feedback_rate"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Icon.Clickable">

        <ImageView
          android:id="@+id/image_feedback_rate"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_star_anim"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/action_rate" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/action_rate_description" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_feedback_email"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Icon.Clickable">

        <ImageView
          android:id="@+id/image_feedback_email"
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_email"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/action_email" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/action_email_description" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_feedback_github"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Icon.Clickable">

        <ImageView
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_github"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/action_github" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/action_github_description" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/linear_feedback_share"
        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Icon.Clickable">

        <ImageView
          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_share"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Title"
            android:text="@string/action_share" />

          <TextView
            style="@style/Widget.Doodle.TextView.ListItem.Description"
            android:text="@string/action_share_description" />

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>