<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of Doodle Android.
  ~
  ~ Doodle Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Doodle Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2019-2021 by Patrick Zedler
  -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <com.google.android.material.appbar.MaterialToolbar
    style="@style/Widget.Doodle.Toolbar.Centered"
    app:title="@string/title_apply_changes" />

  <View
    style="@style/Widget.Doodle.Divider"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
      android:id="@+id/linear_apply_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        style="@style/Widget.Doodle.TextView.Paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/msg_apply_changes"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/button_apply_open"
        style="@style/Widget.Doodle.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_open_app_info" />

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>